[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/StartScreenBackground.png" type="Texture" id=1]
[ext_resource path="res://scripts/StartScreenButtonContainer.gd" type="Script" id=2]
[ext_resource path="res://resources/start_game_button.png" type="Texture" id=3]
[ext_resource path="res://resources/start_game_hovered_button.png" type="Texture" id=4]
[ext_resource path="res://resources/credits_button.png" type="Texture" id=5]
[ext_resource path="res://resources/credits_hovered_button.png" type="Texture" id=6]
[ext_resource path="res://resources/quit_button.png" type="Texture" id=7]
[ext_resource path="res://resources/quit_hovered_button.png" type="Texture" id=8]

[node name="Node2D" type="Node2D"]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 1 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="StartScreenButtonContainer" type="VBoxContainer" parent="Sprite" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 200.0
margin_right = 683.0
margin_bottom = 569.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Margin" ]

[node name="StartButton" type="TextureButton" parent="Sprite/StartScreenButtonContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )
_sections_unfolded = [ "Focus", "Material", "Mouse", "Textures", "Visibility" ]

[node name="CreditsButton" type="TextureButton" parent="Sprite/StartScreenButtonContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 600.0
margin_bottom = 204.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )
_sections_unfolded = [ "Grow Direction", "Margin", "Textures" ]

[node name="QuitButton" type="TextureButton" parent="Sprite/StartScreenButtonContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 208.0
margin_right = 600.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 8 )
_sections_unfolded = [ "Margin", "Textures" ]

[connection signal="pressed" from="Sprite/StartScreenButtonContainer/StartButton" to="Sprite/StartScreenButtonContainer" method="_on_StartButton_pressed"]

[connection signal="pressed" from="Sprite/StartScreenButtonContainer/CreditsButton" to="Sprite/StartScreenButtonContainer" method="_on_CreditsButton_pressed"]

[connection signal="pressed" from="Sprite/StartScreenButtonContainer/CreditsButton" to="Sprite/StartScreenButtonContainer" method="_on_SplashButton_pressed"]

[connection signal="pressed" from="Sprite/StartScreenButtonContainer/QuitButton" to="Sprite/StartScreenButtonContainer" method="_on_QuitButton_pressed"]


